<resources>
    <string name="app_name" translatable="false">Manager</string>
    <string name="author">Salavat Dautov</string>
    <string name="сreation_date">Сreation date: March 8, 2020</string>
    <string name="github" translatable="false">GitHub: github.com/SalavatD</string>
    <string name="about">About</string>
    <string name="clear_command">Clear command</string>
    <string name="clear_log">Clear log</string>
    <string name="start_shell">Start Shell</string>
    <string name="shell" translatable="false">Shell</string>
    <string name="execute">Execute</string>
    <string name="enter_command">Enter command</string>
    <string name="clear_external_storage">Clear external storage</string>
    <string name="clear_data">Clear data</string>
    <string name="delete_packages">Delete packages</string>
    <string name="clear_and_delete">Clear and delete</string>
    <string name="refresh">Refresh</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="loading">Loading</string>
    <string name="packages">Packages</string>
    <string name="delete_package">Delete package</string>
    <string name="package_title">Package title</string>
    <string name="package_name">Package name</string>
    <string name="package_source_path">Package source path</string>
    <string name="package_data_dir">Package data dir</string>
    <string name="not_installed_packages">Not installed packages</string>
</resources>