<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/start_packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="startPackagesActivity"
                android:text="@string/packages"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/start_not_installed_packages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="startNotInstalledPackagesActivity"
                android:text="@string/not_installed_packages"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/clear_external_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="clearExternalStorage"
                android:text="@string/clear_external_storage"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/start_shell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:onClick="startShellActivity"
                android:text="@string/start_shell"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>